--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ navbar-links:
   Resources:
     - Learn Vim & Help Uganda!: "https://www.vim.org/" 
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Blog: "/_posts"
+  Projects: "https://github.com/Benjamin-Philip?tab=projects"
   Author's home: "https://benjamin-philip.github.io"
 
 # --- Logo --- #
@@ -106,7 +106,7 @@ footer-link-col: "#404040"
 
 #navbar-img: "/assets/img/bgimage.png"
 #footer-img: "/assets/img/bgimage.png"
-#page-img: "/assets/img/bgimage.png"
+page-img: "/assets/img/bgimage.png"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 #mobile-theme-col: "#0085A1"
@@ -137,7 +137,7 @@ footer-link-col: "#404040"
 # --- Comments --- #
 
 # To use Disqus comments, sign up to https://disqus.com and fill in your Disqus shortname (NOT the userid)
-#disqus: ""
+disqus: "@disqus_YRH1AyyhXs"
 
 # To use Facebook Comments, create a Facebook app and fill in the Facebook App ID
 #fb_comment_id: ""
