--- a/_config.yml
+++ b/_config.yml
@@ -137,7 +137,7 @@ footer-link-col: "#404040"
 # --- Comments --- #
 
 # To use Disqus comments, sign up to https://disqus.com and fill in your Disqus shortname (NOT the userid)
-disqus: "benjamin_philip_blog.disqus.com/admin"
+disqus: "benjamin-philip-blog"
 
 # To use Facebook Comments, create a Facebook app and fill in the Facebook App ID
 #fb_comment_id: ""
