--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ footer-link-col: "#404040"
 #gtag: ""
 
 # Fill in your Google Analytics ID to track your website using Google Analytics
-#google_analytics: ""
+google_analytics: "UA-177241377-1"
 
 # Google Tag Manager ID
 #gtm: ""
