Add extra resource

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,8 @@ navbar-links:
   About Me: "aboutme"
   Tags: "https://benjamin-philip.github.io/tags"
   Resources:
-    - Learn Vim & Help Uganda!: "https://www.vim.org/" 
+    - Learn Vim & Help Uganda!: "https://www.vim.org/"
+    - Vim wiki: "https://vim.fandom.com/wiki"  
     - Learn markdown: "https://www.markdowntutorial.com/"
   Projects: "https://github.com/Benjamin-Philip?tab=projects"
 
