--- a/_config.yml
+++ b/_config.yml
@@ -125,7 +125,7 @@ gtag: "UA-177241377-1"
 google_analytics: "UA-177241377-1"
 
 # Google Tag Manager ID
-gtm: "GTM-NQLQ3M2"
+#gtm: 
 
 # Matomo (aka Piwik) Web statistics
 # Uncomment the following section to enable Matomo. The opt-out parameter controls
