--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ author: Benjamin Philip
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  SICP: "https://benjamin-philip.github.io/sicp/"
+  SICP: "https://benjamin-philip.github.io/"
   About Me: "aboutme"
   Tags: "https://benjamin-philip.github.io/tags"
   Resources:
