--- a/_config.yml
+++ b/_config.yml
@@ -193,7 +193,7 @@ defaults:
   -
     scope:
       path: ""
-      type: "sicp"
+      type: "posts"
     values:
       layout: "post"
       comments: true  # add comments to all blog posts
@@ -236,6 +236,7 @@ exclude:
   - README.md
   - screenshot.png
   - docs/
+  - sitemap.xml
 
 plugins:
   - jekyll-paginate
